# impala

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md
.github/: dependabot.yml
.github/workflows/: ci-card.yml  ci-demo.yml  ci-lib.yml  ci-soroban.yml  ci-ui.yml  ci.yml  impala-android.yml  impala-bridge.yml  impala-card.yml  impala-ui.yml  security.yml
docs/runbooks/: deploy.md  incident-response.md  rotate-secrets.md
impala-android-demo/: .gitignore  README.md  build.gradle.kts  local.properties.example  settings.gradle.kts
impala-android-demo/app/: build.gradle.kts  proguard-rules.pro
impala-android-demo/app/src/main/: AndroidManifest.xml
impala-android-demo/app/src/main/res/drawable/: ic_cards.xml  ic_github.xml  ic_nfc.xml  ic_transfers.xml
impala-android-demo/app/src/main/res/layout/: activity_log_viewer.xml  activity_login.xml  activity_main.xml  activity_nfc_debug.xml  dialog_new_transfer.xml  dialog_sms_enrollment.xml  fragment_cards.xml  fragment_notification_preferences.xml  fragment_settings.xml  fragment_transfers.xml  item_card.xml  item_subscription.xml  item_transfer.xml
impala-android-demo/app/src/main/res/menu/: bottom_nav_menu.xml  log_viewer_menu.xml  main_options_menu.xml
impala-android-demo/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
impala-android-demo/app/src/main/res/navigation/: main_nav_graph.xml
impala-android-demo/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
impala-android-demo/app/src/main/res/values-night/: themes.xml
impala-android-demo/app/src/main/res/xml/: backup_rules.xml  network_security_config.xml
impala-bridge/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  deny.toml  docker-compose.yml  openapi.yaml
impala-bridge/examples/: api_examples.sh
impala-bridge/migrations/: 001_create_impala_account.sql  002_create_impala_auth.sql  003_create_impala_schema.sql  004_create_cron_sync.sql  005_create_impala_mfa.sql  006_create_transaction.sql  007_transaction_log_trigger.sql  008_create_card.sql  009_create_notify.sql  010_add_notify_fields.sql  011_create_notify_log.sql  012_add_auth_provider.sql  013_create_notification_subscriptions.sql  014_create_device_tokens.sql  015_add_email_medium.sql  016_add_performance_indices.sql  017_schema_improvements.sql
impala-bridge/src/: auth.rs  config.rs  constants.rs  error.rs  jwt.rs  ldap.rs  main.rs  middleware.rs  models.rs  notifications.rs  okta.rs  redis_helpers.rs  sns.rs  streams.rs  telemetry.rs  validate.rs  vault.rs  worker.rs
impala-bridge/src/handlers/: account.rs  authenticate.rs  card.rs  device_token.rs  health.rs  logout.rs  mfa.rs  mod.rs  network.rs  notification_subscription.rs  notify.rs  okta.rs  subscribe.rs  sync.rs  token.rs  transaction.rs
impala-bridge/src/jobs/: batch_sync.rs  mod.rs  send_notification.rs  stellar_reconcile.rs
impala-card/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
impala-card/applet/: README.md  build.gradle.kts  build.xml
impala-card/caprunner/: .gitignore  README.md  captest.py  inspect.sh  setup.sh  test.sh
impala-card/caprunner/scripts/: test_basic.txt  test_initialize.txt  test_pin.txt
impala-card/docs/: apdu.md
impala-card/gradle/: libs.versions.toml
impala-card/sdk/: build.gradle.kts
impala-lib/: .gitignore  README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
impala-lib/src/main/: AndroidManifest.xml
impala-lib/src/main/java/com/payala/impala/: GeoUpdateReceiver.java  (+6 more)
impala-lib/src/main/res/values/: strings.xml  themes.xml
impala-lib/src/main/res/values-night/: themes.xml
impala-soroban/: README.md
impala-soroban/integration-test/: Cargo.toml
impala-soroban/integration-test/src/: lib.rs
impala-soroban/integration-test/test_snapshots/tests/: test_balance_defaults_to_zero.1.json  test_balance_zero_for_all_signers_after_init.1.json  test_cancel_already_cancelled_timelock_panics.1.json  test_cancel_prevents_execution.1.json  test_cancel_still_works_while_paused.1.json  test_delay_too_long_panics.1.json  test_double_execute_transfer_panics.1.json  test_execute_transfer_before_unlock_panics.1.json  test_execute_transfer_with_time_advancement.1.json  test_init_with_max_threshold.1.json  test_init_with_single_signer_threshold_one.1.json  test_initialize_sets_state.1.json  test_multiple_balances_independent.1.json  test_pause_blocks_wrap.1.json  test_rotate_signers.1.json  test_rotate_signers_old_signers_rejected.1.json  test_schedule_transfer_insufficient_signers.1.json  test_schedule_transfer_stores_sender.1.json  test_schedule_unwrap_creates_timelock.1.json  test_schedule_unwrap_exact_balance.1.json  test_schedule_unwrap_exceeds_balance.1.json  test_schedule_unwrap_insufficient_balance.1.json  test_schedule_unwrap_insufficient_signers.1.json  test_schedule_unwrap_returns_timelock_id.1.json  test_timelock_ids_are_sequential.1.json  test_total_supply_zero_after_init.1.json  test_unpause_allows_operations.1.json  test_wrap_multiple_times_accumulates.1.json  test_zero_threshold_panics.1.json
impala-soroban/testnet-tests/: Cargo.toml
impala-soroban/testnet-tests/src/: lib.rs
impala-soroban/testnet-tests/tests/: integration.rs
impala-ui/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  vitest.config.js
impala-ui/html/: accounts.html  admin.html  cards.html  dashboard.html  index.html  mfa.html  okta-callback.html  transactions.html
impala-ui/html/css/: app.css
impala-ui/html/js/: accounts.js  admin.js  api.js  auth.js  cards.js  dashboard.js  mfa.js  okta-auth.js  paginate.js  roles.js  router.js  session-timer.js  transactions.js  validate.js
impala-ui/tests/: validate.test.js
impala-ui/tests/helpers/: load-script.js
terraform/: README.md  alb.tf  autoscaling.tf  dr.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  impala.tf  live.tf  main.tf  monitoring.tf  otel.tf  outputs.tf  rds.tf  route53.tf  s3.tf  security_groups.tf  ses.tf  sns_sqs.tf  terraform.tfvars.example  testnet.tf  variables.tf  vpc.tf  waf.tf
(+76 files in other folders)
