[package]
name = "impala-bridge"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
headers = "0.3"
jsonwebtoken = "7.2"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"] }
password-auth = { version = "1.0", features = ["argon2"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
redis = { version = "0.23", features = ["tokio-comp", "tokio-rustls-comp"] }
deadpool-redis = "0.13"
chrono = "0.4"
futures = "0.3"
log = "0.4"
syslog = "6.1"
ldap3 = "0.11"
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.3", features = ["cors", "trace", "request-id", "set-header", "limit", "compression-gzip"] }
tokio-util = { version = "0.7", features = ["rt"] }
subtle = "2"
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic", "metrics"] }
url = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-sesv2 = "1"

[build-dependencies]
chrono = "0.4"
