[package]
name = "impala-bridge"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.91"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate", "chrono"] }
password-auth = { version = "1.0", features = ["argon2"] }
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form", "http2"], default-features = false }
redis = { version = "1", features = ["tokio-comp"] }
deadpool-redis = "0.23"
chrono = "0.4"
futures = "0.3"
log = "0.4"
syslog = "7"
ldap3 = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header", "limit", "compression-gzip"] }
tokio-util = { version = "0.7", features = ["rt"] }
subtle = "2"
totp-rs = { version = "5.7", features = ["gen_secret", "otpauth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
url = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-sesv2 = "1"

[build-dependencies]
chrono = "0.4"
