[package]
name = "soroban-impala-integration-test"
version = "0.0.1"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Latest 23.x series. Cargo.lock already resolved 23.0.1 → 23.5.1, so this makes
# the intent explicit. Not moving to 24/25 without a local cargo build loop to
# catch breaking changes in the Soroban API surface.
soroban-sdk = { version = "23.5.1" }

[dev-dependencies]
soroban-sdk = { version = "23.5.1", features = ["testutils"] }

[profile.release]
debug = 0
opt-level = "z"
overflow-checks = true
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
